<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/interest_title"
        style="@style/title_text_style"
        android:text="@string/i_am_interested_in" />


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_below="@+id/interest_title"
        android:layout_above="@+id/lo_bottom"
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/gender_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_man"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/unselected_item_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/man"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_woman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/unselected_item_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/woman"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/unselected_item_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/both"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/age_range"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_age_start"
                android:layout_width="100dp"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:maxLength="2"
                android:inputType="number"
                android:hint="@string/min"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/to"/>

            <EditText
                android:id="@+id/et_age_end"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:maxLength="2"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:hint="@string/max"
                android:background="@drawable/edittext_bg"/>
        </LinearLayout>
        <include layout="@layout/error" />
    </LinearLayout>
</ScrollView>

    <include
        android:id="@+id/lo_bottom"
        layout="@layout/layout_continue" />
</RelativeLayout>
