<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gender_title"
        style="@style/title_text_style"
        android:text="@string/i_am_a" />

    <LinearLayout
        android:id="@+id/gender_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_continue"
        android:layout_below="@+id/gender_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_man"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/unselected_item_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/man"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_woman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/unselected_item_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/woman"
            android:textSize="15sp" />

    </LinearLayout>

    <include layout="@layout/layout_continue" />
</RelativeLayout>
